--- a/app/components/plugins/footerButton/themes/white/footerButtons.less
+++ b/app/components/plugins/footerButton/themes/white/footerButtons.less
@@ -1,4 +1,5 @@
-
+@import url('../../../../less/color.less');
+@bg-color:@white;
 @height:50px;
 .footer-buttons{
     width: 100%;
@@ -6,7 +7,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    background-color: white;
+    background-color: @bg-color;
     .button-item{
         width: 25%;
         height: @height;
