文档翻页动画

--- a/app/components/plugins/carousel/carousel.less
+++ b/app/components/plugins/carousel/carousel.less
@@ -4,4 +4,23 @@
         width:100%;
     }
   }
-  
+  .carseoul{
+      overflow: hidden;
+  }
+  .slick-block{
+      position: absolute;
+      left: 0;
+      top:0;
+      z-index: 1000;
+      div{
+          position: absolute;
+          z-index:1001;
+          width:50%;
+      }
+      .slick-left{
+        left: 0;
+      }
+      .slick-right{
+        left:50%;
+      }
+  }
