文档图片切换 :monkey_face:

--- a/app/components/plugins/carousel/carousel.less
+++ b/app/components/plugins/carousel/carousel.less
@@ -19,8 +19,32 @@
       }
       .slick-left{
         left: 0;
+        .left-btn{
+            display: none;
+            width:50px;
+            height:25px;
+            border-radius: 5px;
+            background: yellow;
+        }
+      }
+      .slick-left:hover{
+        .left-btn{
+            display: block;
+        }
+      }
+      .slick-right:hover{
+        .right-btn{
+            display: block;
+        }
       }
       .slick-right{
         left:50%;
+        .right-btn{
+            display: none;
+            width:50px;
+            height:25px;
+            border-radius: 5px;
+            background: yellow;
+        }
       }
   }
